fix: overlap on mobile header by setting a high z-index

--- a/app/_components/mobileHeader/index.module.css
+++ b/app/_components/mobileHeader/index.module.css
@@ -7,6 +7,7 @@
   width: 100vw;
   height: var(--size-46);
   text-transform: uppercase;
+  z-index: var(--layer-4);
 }
 
 .topSection {
